--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styleP1.css">
+    <link rel="stylesheet" href="./css/styleP2.css">
     <link rel="shortcut icon" href="./icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
 </head>
 <body>
     <div class="grilla-general">
+        <div class="caja-iconos"> 
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="./icons/whatsappP.png" alt=""></a> 
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="./icons/instagramP.png" alt=""></a>
+            <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="./icons/pinterestP.png" alt=""></a>
+        </div>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
@@ -36,35 +40,35 @@
             publicidad
         </aside>
     <main>
-        <div class="card1P1 cardsP1">
-            <div class="caja-imgCard1 caja-imgCardsP1">
-                <img class="imgCard1 imgCardsP1 img-fluid" src="./img/dato1.png" alt="dato1">
+        <div class="card1P1 cards">
+            <div class="caja-imgCard1 caja-imgCards">
+                <img class="imgCard1 imgCards img-fluid" src="./img/dato1.png" alt="dato1">
             </div>    
-            <div class="caja-textoCard1 caja-textoCardsP1">
+            <div class="caja-textoCard1 caja-textoCards">
                 <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium quisquam inventore nesciunt animi cumque placeat, voluptatem maiores unde architecto quos est itaque cupiditate at autem magni dolor nostrum eum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum deserunt adipisci nam consequatur ea, porro laboriosam cumque tenetur totam explicabo incidunt, suscipit qui soluta esse laudantium asperiores aliquam corrupti.</p>
             </div>    
         </div>
-        <div class="card2P1 cardsP1">
-            <div class="caja-imgCard2 caja-imgCardsP1">
-                <img class="imgCard2 imgCardsP1" src="./img/dato1.png" alt="dato2">
+        <div class="card2P1 cards">
+            <div class="caja-imgCard2 caja-imgCards">
+                <img class="imgCard2 imgCards" src="./img/dato1.png" alt="dato2">
             </div>
-            <div class="caja-textoCard2 caja-textoCardsP1">  
+            <div class="caja-textoCard2 caja-textoCards">  
                 <p class="textoImg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatibus nobis cum iusto illo dignissimos minima aut minus iure autem eaque corrupti facilis, odit, expedita repellendus deserunt exercitationem recusandae corporis?</p>
             </div>
         </div>
-        <div class="card3P1 cardsP1">
-            <div class="caja-imgCard3 caja-imgCardsP1">
-                <img class="imgCard3 imgCardsP1" src="./img/dato1.png" alt="dato3">
+        <div class="card3P1 cards">
+            <div class="caja-imgCard3 caja-imgCards">
+                <img class="imgCard3 imgCards" src="./img/dato1.png" alt="dato3">
             </div>
-            <div class="caja-textoCard3 caja-textoCardsP1"> 
+            <div class="caja-textoCard3 caja-textoCards"> 
                 <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio explicabo quod sapiente ullam quas aliquam laudantium consequuntur repellendus reiciendis itaque enim reprehenderit laborum eos dolorum, nobis, debitis, aut aperiam et.</p>
             </div>
         </div>
-        <div class="card4P1 cardsP1">
-            <div class="caja-imgCard4 caja-imgCardsP1">
-                <img class="imgCard4 imgCardsP1" src="./img/dato1.png" alt="dato4">
+        <div class="card4P1 cards">
+            <div class="caja-imgCard4 caja-imgCards">
+                <img class="imgCard4 imgCards" src="./img/dato1.png" alt="dato4">
             </div>
-            <div class="caja-textoCard4 caja-textoCardsP1">    
+            <div class="caja-textoCard4 caja-textoCards">    
                 <p class="textoImg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolorem ratione incidunt, repudiandae rem labore quia qui rerum tempora, veritatis eaque recusandae esse, nam repellendus expedita? Nihil at quibusdam impedit.</p>
             </div>    
         </div>
