--- a/pages/interior.html
+++ b/pages/interior.html
@@ -27,11 +27,11 @@
                     </button>
                     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/interior.html">interior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/exterior.html">exterior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/aromaticas.html">aromaticas</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./pages/asesoramiento.html">asesoramiento</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../pages/asesoramiento.html">asesoramiento</a></li>
                         </ul>
                     </div>
                 </div>
