--- a/index.html
+++ b/index.html
@@ -40,38 +40,73 @@
             publicidad
         </aside>
     <main>
-        <div class="card1P1 cards">
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/anturio.png" class="d-block w-100 img-fluid alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Etiqueta de la primera diapositiva</h5>
+                  <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/limonero.png" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Etiqueta de la segunda diapositiva</h5>
+                  <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/pataDeElefante.png" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Etiqueta de la tercera diapositiva</h5>
+                  <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Siguiente</span>
+            </button>
+          </div>
+
+
+
+        <div class="card1P2 cards">
             <div class="caja-imgCard1 caja-imgCards">
-                <img class="imgCard1 imgCards img-fluid" src="./img/dato1.png" alt="dato1">
+                <img class="imgCard1 imgCards img-fluid" src="../img/potus.png" alt="planta potus">
             </div>    
             <div class="caja-textoCard1 caja-textoCards">
-                <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium quisquam inventore nesciunt animi cumque placeat, voluptatem maiores unde architecto quos est itaque cupiditate at autem magni dolor nostrum eum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum deserunt adipisci nam consequatur ea, porro laboriosam cumque tenetur totam explicabo incidunt, suscipit qui soluta esse laudantium asperiores aliquam corrupti.</p>
-            </div>    
+                <p class="textoImg">potus</p>
+            </div>   
         </div>
-        <div class="card2P1 cards">
+        <div class="aa">  
+            <p class="a">Una casa sin un potus es impensable porque es agradecido, ágil y un superviviente. Como sus tallos caen y se arrastran, funciona bien en una cesta colgante o en una estantería alta para que pueda lucir su efecto cascada. Además, el potus también es conocido por su cualidad para purificar el aire y es muy longeva.</p>
+        </div> 
+
+
+
+        <div class="card2P2 cards">
             <div class="caja-imgCard2 caja-imgCards">
-                <img class="imgCard2 imgCards" src="./img/dato1.png" alt="dato2">
+                <img class="imgCard2 imgCards img-fluid" src="../img/pataDeElefante.png" alt="planta pata de elefante">
             </div>
             <div class="caja-textoCard2 caja-textoCards">  
-                <p class="textoImg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatibus nobis cum iusto illo dignissimos minima aut minus iure autem eaque corrupti facilis, odit, expedita repellendus deserunt exercitationem recusandae corporis?</p>
+                <p class="textoImg">pata de elefante</p>
             </div>
         </div>
-        <div class="card3P1 cards">
-            <div class="caja-imgCard3 caja-imgCards">
-                <img class="imgCard3 imgCards" src="./img/dato1.png" alt="dato3">
-            </div>
-            <div class="caja-textoCard3 caja-textoCards"> 
-                <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio explicabo quod sapiente ullam quas aliquam laudantium consequuntur repellendus reiciendis itaque enim reprehenderit laborum eos dolorum, nobis, debitis, aut aperiam et.</p>
-            </div>
-        </div>
-        <div class="card4P1 cards">
-            <div class="caja-imgCard4 caja-imgCards">
-                <img class="imgCard4 imgCards" src="./img/dato1.png" alt="dato4">
-            </div>
-            <div class="caja-textoCard4 caja-textoCards">    
-                <p class="textoImg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolorem ratione incidunt, repudiandae rem labore quia qui rerum tempora, veritatis eaque recusandae esse, nam repellendus expedita? Nihil at quibusdam impedit.</p>
-            </div>    
-        </div>
+        <div class="aa">  
+            <p class="a">Es una planta de interior muy alta. Puede llegar a medir un medio y medio en maceta, aunque e su hábitat natural puede alcanzar los 10 m. Se caracteriza por su grueso tronco, similar a una pata de elefante, de ahí su nombre. Es muy decorativa y sus cuidados son muy sencillos. Necesita grandes dosis de luz, pero no directa. Se recomienda un buen drenaje y comprobar la humedad de la tierra antes de regalarla.</p>
+        </div> 
     </main>
         <footer>
             <div>
