--- a/index.html
+++ b/index.html
@@ -41,48 +41,48 @@
         </aside>
     <main>
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide carousel-tamaño" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/anturio.png" class="d-block w-100 img-fluid alt="...">
+                <div class="carousel-item active">
+                    <img src="./img/lavandaAromatica.png" class="d-block w-100 img-fluid img" alt=...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Etiqueta de la primera diapositiva</h5>
-                  <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
+                    <h5>Etiqueta de la primera diapositiva</h5>
+                    <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/limonero.png" class="d-block w-100 img-fluid" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Etiqueta de la segunda diapositiva</h5>
-                  <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/pataDeElefante.png" class="d-block w-100 img-fluid" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Etiqueta de la tercera diapositiva</h5>
-                  <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
-                </div>
-              </div>
             </div>
+                <div class="carousel-item">
+                    <img src="./img/limonero.png" class="d-block w-100 img-fluid img" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Etiqueta de la segunda diapositiva</h5>
+                    <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
+                </div>
+            </div>
+                <div class="carousel-item">
+                    <img src="./img/helecho.png" class="d-block w-100 img-fluid img" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Etiqueta de la tercera diapositiva</h5>
+                    <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+                </div>
+            </div>
+        </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Anterior</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Siguiente</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
             </button>
-          </div>
+        </div>
 
 
 
-        <div class="card1P2 cards">
+        <div class="card1P1 cards">
             <div class="caja-imgCard1 caja-imgCards">
                 <img class="imgCard1 imgCards img-fluid" src="../img/potus.png" alt="planta potus">
             </div>    
