--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         </aside>
     <main>
 
+        <h1>productos para cuidar de tus plantas</h1>
+
         <div id="carouselExampleCaptions" class="carousel slide carousel-tamaño" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -49,21 +51,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/lavandaAromatica.png" class="d-block w-100 img-fluid img" alt=...">
+                    <img src="./img/lavandaAromatica.png" class="d-block w-100 img-fluid img-carousel" alt=...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Etiqueta de la primera diapositiva</h5>
                     <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
                 </div>
             </div>
                 <div class="carousel-item">
-                    <img src="./img/limonero.png" class="d-block w-100 img-fluid img" alt="...">
+                    <img src="./img/limonero.png" class="d-block w-100 img-fluid img-carousel" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Etiqueta de la segunda diapositiva</h5>
                     <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
                 </div>
             </div>
                 <div class="carousel-item">
-                    <img src="./img/helecho.png" class="d-block w-100 img-fluid img" alt="...">
+                    <img src="./img/helecho.png" class="d-block w-100 img-fluid img-carousel" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Etiqueta de la tercera diapositiva</h5>
                     <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
@@ -81,6 +83,14 @@
         </div>
 
 
+<div class="card" style="width: 18rem;">
+  <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Título de la tarjeta</h5>
+    <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+    <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+  </div>
+</div>
 
         <div class="card1P1 cards">
             <div class="caja-imgCard1 caja-imgCards">
