--- a/pages/interior.html
+++ b/pages/interior.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styleP2.css">
     <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
@@ -42,6 +41,7 @@
         </aside>
         <main>
 
+            <h1>plantas para el interior de tu hogar</h1>
             <div class="card1P2 cards">
                 <div class="caja-imgCard1 caja-imgCards">
                     <img class="imgCard1 imgCards img-fluid" src="../img/potus.png" alt="planta potus">
