--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -42,7 +42,10 @@
         </aside>
         <main>
 
-            <h1>plantas aromáticas para tu hogar</h1>
+            <div class="caja-h1">
+                <h1>plantas aromáticas para tu hogar</h1>
+            </div>
+            
             <div class="card1P4 cards">
                 <div class="caja-imgCard1 caja-imgCards">
                     <img class="imgCard1 imgCards" src="../img/albahaca.png" alt="dato1">
