--- a/pages/interior.html
+++ b/pages/interior.html
@@ -40,8 +40,11 @@
             publicidad
         </aside>
         <main>
+        
+            <div class="caja-h1">
+                <h1>plantas para el interior de tu hogar</h1>
+            </div>
 
-            <h1>plantas para el interior de tu hogar</h1>
             <div class="card1P2 cards">
                 <div class="caja-imgCard1 caja-imgCards">
                     <img class="imgCard1 imgCards img-fluid" src="../img/potus.png" alt="planta potus">
