--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
         </aside>
     <main>
 
-        <h1>productos para cuidar de tus plantas</h1>
-
+        <div class="caja-h1">
+            <h1>productos para cuidar de tus plantas</h1>
+        </div>
+        
         <div id="carouselExampleCaptions" class="carousel slide carousel-tamaño" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
