--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -42,7 +42,10 @@
         </aside>
         <main>
             
-            <h1>plantas para el exterior de tu hogar</h1>
+            <div class="caja-h1">
+                <h1>plantas para el exterior de tu hogar</h1>
+            </div>
+            
             <div class="card1P3 cards">
                 <div class="caja-imgCard1 cardscaja-imgCards">
                     <img class="imgCard1 imgCards" src="../img/agave.png" alt="dato1">
