--- a/index.html
+++ b/index.html
@@ -42,9 +42,45 @@
     <main>
 
         <div class="caja-h1">
-            <h1>productos para cuidar de tus plantas</h1>
+            <h1>Productos para cuidar de tus plantas</h1>
         </div>
-        
+
+        <div class="card productos" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">tierra abonada</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+        <div class="card productos" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+            </div>
+        </div>
+
+        <div class="card productos" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+            </div>
+        </div>
+
+        <div class="card productos" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+            </div>
+        </div>
+
         <div id="carouselExampleCaptions" class="carousel slide carousel-tamaño" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -84,41 +120,6 @@
             </button>
         </div>
 
-
-<div class="card" style="width: 18rem;">
-  <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Título de la tarjeta</h5>
-    <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-    <a href="#" class="btn btn-primary">Ir a algún lugar</a>
-  </div>
-</div>
-
-        <div class="card1P1 cards">
-            <div class="caja-imgCard1 caja-imgCards">
-                <img class="imgCard1 imgCards img-fluid" src="../img/potus.png" alt="planta potus">
-            </div>    
-            <div class="caja-textoCard1 caja-textoCards">
-                <p class="textoImg">potus</p>
-            </div>   
-        </div>
-        <div class="aa">  
-            <p class="a">Una casa sin un potus es impensable porque es agradecido, ágil y un superviviente. Como sus tallos caen y se arrastran, funciona bien en una cesta colgante o en una estantería alta para que pueda lucir su efecto cascada. Además, el potus también es conocido por su cualidad para purificar el aire y es muy longeva.</p>
-        </div> 
-
-
-
-        <div class="card2P2 cards">
-            <div class="caja-imgCard2 caja-imgCards">
-                <img class="imgCard2 imgCards img-fluid" src="../img/pataDeElefante.png" alt="planta pata de elefante">
-            </div>
-            <div class="caja-textoCard2 caja-textoCards">  
-                <p class="textoImg">pata de elefante</p>
-            </div>
-        </div>
-        <div class="aa">  
-            <p class="a">Es una planta de interior muy alta. Puede llegar a medir un medio y medio en maceta, aunque e su hábitat natural puede alcanzar los 10 m. Se caracteriza por su grueso tronco, similar a una pata de elefante, de ahí su nombre. Es muy decorativa y sus cuidados son muy sencillos. Necesita grandes dosis de luz, pero no directa. Se recomienda un buen drenaje y comprobar la humedad de la tierra antes de regalarla.</p>
-        </div> 
     </main>
         <footer>
             <div>
