--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -43,7 +43,7 @@
         <main>
 
             <div class="caja-h1">
-                <h1>plantas aromáticas para tu hogar</h1>
+                <h1>Plantas aromáticas para tu hogar</h1>
             </div>
             
             <div class="card1P4 cards">
