--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -43,7 +43,7 @@
         <main>
             
             <div class="caja-h1">
-                <h1>plantas para el exterior de tu hogar</h1>
+                <h1>Plantas para el exterior de tu hogar</h1>
             </div>
             
             <div class="card1P3 cards">
