--- a/pages/interior.html
+++ b/pages/interior.html
@@ -19,8 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
-
+                    <a class="navbar-brand" href="../index.html"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -42,7 +41,7 @@
         <main>
         
             <div class="caja-h1">
-                <h1>plantas para el interior de tu hogar</h1>
+                <h1>Plantas para el interior de tu hogar</h1>
             </div>
 
             <div class="card1P2 cards">
