--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -20,12 +20,12 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
+                    <a class="navbar-brand" href="../index.html"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/interior.html">interior</a></li>
